// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Babel Package transformer should work with child packages 1`] = `
Object {
  "babel": Object {
    "env": Object {
      "cjs": Object {
        "comments": true,
        "presets": Array [
          Array [
            "@babel/env",
            Object {
              "modules": "commonjs",
              "targets": Object {
                "node": "10",
              },
            },
          ],
        ],
      },
      "mjs": Object {
        "comments": false,
        "presets": Array [
          Array [
            "@babel/env",
            Object {
              "modules": false,
              "targets": Object {
                "node": "12",
              },
            },
          ],
        ],
      },
    },
    "plugins": Array [
      "@babel/plugin-proposal-object-rest-spread",
    ],
    "presets": Array [
      Array [
        "@babel/env",
        Object {
          "targets": Object {
            "node": "16.15.0",
          },
        },
      ],
    ],
    "sourceMaps": true,
  },
  "devDependencies": Object {
    "@babel/cli": "^7.17.10",
    "@babel/core": "^7.18.2",
    "@babel/plugin-proposal-object-rest-spread": "^7.18.0",
    "@babel/preset-env": "^7.18.2",
    "@babel/register": "^7.17.7",
  },
  "main": "index",
  "metapak": Object {
    "data": Object {
      "bundleFiles": Array [
        "dist",
        "src",
      ],
      "childPackage": true,
      "files": "src/*.js src/**/*.js",
    },
  },
  "module": "index.mjs",
  "scripts": Object {
    "compile": "rimraf -f 'dist' && npm run compile:cjs && npm run compile:mjs",
    "compile:cjs": "babel --env-name=cjs --out-dir=dist --source-maps=true src",
    "compile:mjs": "babel --env-name=mjs --out-file-extension=.mjs --out-dir=dist --source-maps=true src",
  },
}
`;

exports[`Babel Package transformer should work with eslint config 1`] = `
Object {
  "babel": Object {
    "env": Object {
      "cjs": Object {
        "comments": true,
        "presets": Array [
          Array [
            "@babel/env",
            Object {
              "modules": "commonjs",
              "targets": Object {
                "node": "10",
              },
            },
          ],
        ],
      },
      "mjs": Object {
        "comments": false,
        "presets": Array [
          Array [
            "@babel/env",
            Object {
              "modules": false,
              "targets": Object {
                "node": "12",
              },
            },
          ],
        ],
      },
    },
    "plugins": Array [
      "@babel/plugin-proposal-object-rest-spread",
    ],
    "presets": Array [
      Array [
        "@babel/env",
        Object {
          "targets": Object {
            "node": "16.15.0",
          },
        },
      ],
    ],
    "sourceMaps": true,
  },
  "devDependencies": Object {
    "@babel/cli": "^7.17.10",
    "@babel/core": "^7.18.2",
    "@babel/eslint-parser": "^7.18.2",
    "@babel/plugin-proposal-object-rest-spread": "^7.18.0",
    "@babel/preset-env": "^7.18.2",
    "@babel/register": "^7.17.7",
  },
  "eslintConfig": Object {
    "parserOptions": Object {
      "sourceType": "module",
    },
  },
  "greenkeeper": Object {
    "ignore": Array [
      "@babel/cli",
      "@babel/core",
      "@babel/register",
      "@babel/preset-env",
      "@babel/plugin-proposal-object-rest-spread",
      "babel-eslint",
    ],
  },
  "main": "index",
  "metapak": Object {
    "configs": Array [
      "eslint",
      "babel",
    ],
    "data": Object {
      "bundleFiles": Array [
        "dist",
        "src",
      ],
      "testsFiles": "src/*.js src/**/*.js",
    },
  },
  "module": "index.mjs",
  "prettier": Object {
    "trailingComma": "all",
  },
  "scripts": Object {
    "compile": "rimraf -f 'dist' && npm run compile:cjs && npm run compile:mjs",
    "compile:cjs": "babel --env-name=cjs --out-dir=dist --source-maps=true src",
    "compile:mjs": "babel --env-name=mjs --out-file-extension=.mjs --out-dir=dist --source-maps=true src",
    "precz": "npm run compile",
    "preversion": "npm run compile",
    "test": "",
  },
}
`;

exports[`Babel Package transformer should work with jest config 1`] = `
Object {
  "babel": Object {
    "env": Object {
      "cjs": Object {
        "comments": true,
        "presets": Array [
          Array [
            "@babel/env",
            Object {
              "modules": "commonjs",
              "targets": Object {
                "node": "10",
              },
            },
          ],
        ],
      },
      "mjs": Object {
        "comments": false,
        "presets": Array [
          Array [
            "@babel/env",
            Object {
              "modules": false,
              "targets": Object {
                "node": "12",
              },
            },
          ],
        ],
      },
    },
    "plugins": Array [
      "@babel/plugin-proposal-object-rest-spread",
    ],
    "presets": Array [
      Array [
        "@babel/env",
        Object {
          "targets": Object {
            "node": "16.15.0",
          },
        },
      ],
    ],
    "sourceMaps": true,
  },
  "devDependencies": Object {
    "@babel/cli": "^7.17.10",
    "@babel/core": "^7.18.2",
    "@babel/plugin-proposal-object-rest-spread": "^7.18.0",
    "@babel/preset-env": "^7.18.2",
    "@babel/register": "^7.17.7",
  },
  "greenkeeper": Object {
    "ignore": Array [
      "@babel/cli",
      "@babel/core",
      "@babel/register",
      "@babel/preset-env",
      "@babel/plugin-proposal-object-rest-spread",
      "babel-core",
    ],
  },
  "main": "index",
  "metapak": Object {
    "configs": Array [
      "babel",
      "jest",
    ],
    "data": Object {
      "bundleFiles": Array [
        "dist",
        "src",
      ],
      "testsFiles": "src/*.js src/**/*.js",
    },
  },
  "module": "index.mjs",
  "scripts": Object {
    "compile": "rimraf -f 'dist' && npm run compile:cjs && npm run compile:mjs",
    "compile:cjs": "babel --env-name=cjs --out-dir=dist --source-maps=true src",
    "compile:mjs": "babel --env-name=mjs --out-file-extension=.mjs --out-dir=dist --source-maps=true src",
    "precz": "npm run compile",
    "preversion": "npm run compile",
    "test": "",
  },
}
`;

exports[`Babel Package transformer should work with mocha config 1`] = `
Object {
  "babel": Object {
    "env": Object {
      "cjs": Object {
        "comments": true,
        "presets": Array [
          Array [
            "@babel/env",
            Object {
              "modules": "commonjs",
              "targets": Object {
                "node": "10",
              },
            },
          ],
        ],
      },
      "mjs": Object {
        "comments": false,
        "presets": Array [
          Array [
            "@babel/env",
            Object {
              "modules": false,
              "targets": Object {
                "node": "12",
              },
            },
          ],
        ],
      },
    },
    "plugins": Array [
      "@babel/plugin-proposal-object-rest-spread",
    ],
    "presets": Array [
      Array [
        "@babel/env",
        Object {
          "targets": Object {
            "node": "16.15.0",
          },
        },
      ],
    ],
    "sourceMaps": true,
  },
  "devDependencies": Object {
    "@babel/cli": "^7.17.10",
    "@babel/core": "^7.18.2",
    "@babel/plugin-proposal-object-rest-spread": "^7.18.0",
    "@babel/preset-env": "^7.18.2",
    "@babel/register": "^7.17.7",
  },
  "greenkeeper": Object {
    "ignore": Array [
      "@babel/cli",
      "@babel/core",
      "@babel/register",
      "@babel/preset-env",
      "@babel/plugin-proposal-object-rest-spread",
    ],
  },
  "main": "index",
  "metapak": Object {
    "configs": Array [
      "babel",
      "mocha",
    ],
    "data": Object {
      "bundleFiles": Array [
        "dist",
        "src",
      ],
      "testsFiles": "src/*.js src/**/*.js",
    },
  },
  "module": "index.mjs",
  "scripts": Object {
    "compile": "rimraf -f 'dist' && npm run compile:cjs && npm run compile:mjs",
    "compile:cjs": "babel --env-name=cjs --out-dir=dist --source-maps=true src",
    "compile:mjs": "babel --env-name=mjs --out-file-extension=.mjs --out-dir=dist --source-maps=true src",
    "precz": "npm run compile",
    "preversion": "npm run compile",
    "test": "",
  },
}
`;

exports[`Babel Package transformer should work with some files 1`] = `
Object {
  "babel": Object {
    "env": Object {
      "cjs": Object {
        "comments": true,
        "presets": Array [
          Array [
            "@babel/env",
            Object {
              "modules": "commonjs",
              "targets": Object {
                "node": "10",
              },
            },
          ],
        ],
      },
      "mjs": Object {
        "comments": false,
        "presets": Array [
          Array [
            "@babel/env",
            Object {
              "modules": false,
              "targets": Object {
                "node": "12",
              },
            },
          ],
        ],
      },
    },
    "plugins": Array [
      "@babel/plugin-proposal-object-rest-spread",
    ],
    "presets": Array [
      Array [
        "@babel/env",
        Object {
          "targets": Object {
            "node": "16.15.0",
          },
        },
      ],
    ],
    "sourceMaps": true,
  },
  "devDependencies": Object {
    "@babel/cli": "^7.17.10",
    "@babel/core": "^7.18.2",
    "@babel/plugin-proposal-object-rest-spread": "^7.18.0",
    "@babel/preset-env": "^7.18.2",
    "@babel/register": "^7.17.7",
  },
  "greenkeeper": Object {
    "ignore": Array [
      "@babel/cli",
      "@babel/core",
      "@babel/register",
      "@babel/preset-env",
      "@babel/plugin-proposal-object-rest-spread",
    ],
  },
  "main": "index",
  "metapak": Object {
    "configs": Array [
      "babel",
    ],
    "data": Object {
      "bundleFiles": Array [
        "src/**/*.js",
        "LICENSE",
        "README.md",
        "CHANGELOG.md",
        "dist/**/*.js",
        "dist",
        "src",
      ],
      "testsFiles": "src/*.js src/**/*.js",
    },
  },
  "module": "index.mjs",
  "scripts": Object {
    "compile": "rimraf -f 'dist' && npm run compile:cjs && npm run compile:mjs",
    "compile:cjs": "babel --env-name=cjs --out-dir=dist --source-maps=true src",
    "compile:mjs": "babel --env-name=mjs --out-file-extension=.mjs --out-dir=dist --source-maps=true src",
    "precz": "npm run compile",
    "preversion": "npm run compile",
    "test": "",
  },
}
`;
